parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls stmt
   5        | decls fdecl

   6  typ : INT
   7      | BOOL
   8      | FLOAT
   9      | VOID
  10      | EXEC
  11      | CHR
  12      | STR
  13      | LIST
  14      | FUNCTION

  15  exec : simple_exec

  16  simple_exec : path eargs_list

  17  path : ID
  18       | STRING

  19  eargs_list : LBRACE cont_eargs_list
  20             | LBRACE RBRACE

  21  cont_eargs_list : expr COMMA cont_eargs_list
  22                  | expr RBRACE

  23  list : LBRACKET cont_list
  24       | LBRACKET RBRACKET

  25  cont_list : expr COMMA cont_list
  26            | expr RBRACKET

  27  index : ID LBRACKET expr RBRACKET

  28  list_cons : expr CONS ID

  29  list_length : LEN ID

  30  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

  31  formals_opt :
  32              | formal_list

  33  formal_list : typ ID
  34              | formal_list COMMA typ ID

  35  vdecl_list :
  36             | vdecl_list vdecl

  37  vdecl : typ ID SEMI

  38  stmt_list :
  39            | stmt_list stmt

  40  stmt : expr SEMI
  41       | RETURN expr_opt SEMI
  42       | LBRACE stmt_list RBRACE
  43       | IF LPAREN expr RPAREN stmt
  44       | IF LPAREN expr RPAREN stmt ELSE stmt
  45       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  46       | WHILE LPAREN expr RPAREN stmt

  47  expr_opt :
  48           | expr

  49  expr : LITERAL
  50       | FLIT
  51       | BLIT
  52       | ID
  53       | CHAR
  54       | STRING
  55       | expr PLUS expr
  56       | expr MINUS expr
  57       | expr TIMES expr
  58       | expr DIVIDE expr
  59       | expr EQ expr
  60       | expr NEQ expr
  61       | expr LT expr
  62       | expr LEQ expr
  63       | expr GT expr
  64       | expr GEQ expr
  65       | expr AND expr
  66       | expr OR expr
  67       | expr PIPE expr
  68       | MINUS expr
  69       | NOT expr
  70       | ID ASSIGN expr
  71       | ID LPAREN args_opt RPAREN
  72       | LPAREN expr RPAREN
  73       | expr EXITCODE
  74       | index
  75       | PATH expr
  76       | RUN expr
  77       | exec
  78       | list
  79       | list_cons
  80       | list_length

  81  args_opt :
  82           | args_list

  83  args_list : expr
  84            | args_list COMMA expr

  85  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (85)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (85)

	.  reduce 85


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . stmt  (4)
	decls : decls . fdecl  (5)

	LPAREN  shift 5
	LBRACE  shift 6
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	FOR  shift 12
	RETURN  shift 13
	INT  shift 14
	BOOL  shift 15
	FLOAT  shift 16
	VOID  shift 17
	EXEC  shift 18
	CHR  shift 19
	STR  shift 20
	LIST  shift 21
	FUNCTION  shift 22
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	EOF  shift 29
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	vdecl  goto 33
	stmt  goto 34
	fdecl  goto 35
	typ  goto 36
	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 40
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 5
	expr : LPAREN . expr RPAREN  (72)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 45
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 6
	stmt : LBRACE . stmt_list RBRACE  (42)
	stmt_list : .  (38)

	.  reduce 38

	stmt_list  goto 46


state 7
	list : LBRACKET . cont_list  (23)
	list : LBRACKET . RBRACKET  (24)

	LPAREN  shift 5
	LBRACKET  shift 7
	RBRACKET  shift 47
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 48
	list  goto 41
	cont_list  goto 49
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 8
	expr : MINUS . expr  (68)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 50
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 9
	expr : NOT . expr  (69)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 51
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 10
	stmt : IF . LPAREN expr RPAREN stmt  (43)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (44)

	LPAREN  shift 52
	.  error


state 11
	stmt : WHILE . LPAREN expr RPAREN stmt  (46)

	LPAREN  shift 53
	.  error


state 12
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (45)

	LPAREN  shift 54
	.  error


state 13
	stmt : RETURN . expr_opt SEMI  (41)
	expr_opt : .  (47)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	SEMI  reduce 47

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 55
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44
	expr_opt  goto 56


state 14
	typ : INT .  (6)

	.  reduce 6


state 15
	typ : BOOL .  (7)

	.  reduce 7


state 16
	typ : FLOAT .  (8)

	.  reduce 8


state 17
	typ : VOID .  (9)

	.  reduce 9


state 18
	typ : EXEC .  (10)

	.  reduce 10


state 19
	typ : CHR .  (11)

	.  reduce 11


state 20
	typ : STR .  (12)

	.  reduce 12


state 21
	typ : LIST .  (13)

	.  reduce 13


state 22
	typ : FUNCTION .  (14)

	.  reduce 14


state 23
	expr : LITERAL .  (49)

	.  reduce 49


state 24
	expr : BLIT .  (51)

	.  reduce 51


state 25
	path : ID .  (17)
	index : ID . LBRACKET expr RBRACKET  (27)
	expr : ID .  (52)
	expr : ID . ASSIGN expr  (70)
	expr : ID . LPAREN args_opt RPAREN  (71)

	LPAREN  shift 57
	LBRACKET  shift 58
	ASSIGN  shift 59
	SEMI  reduce 52
	RPAREN  reduce 52
	LBRACE  reduce 17
	RBRACE  reduce 52
	COMMA  reduce 52
	RBRACKET  reduce 52
	PLUS  reduce 52
	MINUS  reduce 52
	TIMES  reduce 52
	DIVIDE  reduce 52
	AND  reduce 52
	OR  reduce 52
	GT  reduce 52
	LT  reduce 52
	EQ  reduce 52
	GEQ  reduce 52
	LEQ  reduce 52
	NEQ  reduce 52
	PIPE  reduce 52
	EXITCODE  reduce 52
	CONS  reduce 52


state 26
	expr : FLIT .  (50)

	.  reduce 50


state 27
	expr : CHAR .  (53)

	.  reduce 53


state 28
	path : STRING .  (18)
	expr : STRING .  (54)

	SEMI  reduce 54
	RPAREN  reduce 54
	LBRACE  reduce 18
	RBRACE  reduce 54
	COMMA  reduce 54
	RBRACKET  reduce 54
	PLUS  reduce 54
	MINUS  reduce 54
	TIMES  reduce 54
	DIVIDE  reduce 54
	AND  reduce 54
	OR  reduce 54
	GT  reduce 54
	LT  reduce 54
	EQ  reduce 54
	GEQ  reduce 54
	LEQ  reduce 54
	NEQ  reduce 54
	PIPE  reduce 54
	EXITCODE  reduce 54
	CONS  reduce 54


state 29
	program : decls EOF .  (1)

	.  reduce 1


state 30
	expr : RUN . expr  (76)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 60
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 31
	expr : PATH . expr  (75)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 61
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 32
	list_length : LEN . ID  (29)

	ID  shift 62
	.  error


state 33
	decls : decls vdecl .  (3)

	.  reduce 3


state 34
	decls : decls stmt .  (4)

	.  reduce 4


state 35
	decls : decls fdecl .  (5)

	.  reduce 5


state 36
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (30)
	vdecl : typ . ID SEMI  (37)

	ID  shift 63
	.  error


state 37
	expr : exec .  (77)

	.  reduce 77


state 38
	exec : simple_exec .  (15)

	.  reduce 15


state 39
	simple_exec : path . eargs_list  (16)

	LBRACE  shift 64
	.  error

	eargs_list  goto 65


state 40
	list_cons : expr . CONS ID  (28)
	stmt : expr . SEMI  (40)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : expr . PIPE expr  (67)
	expr : expr . EXITCODE  (73)

	SEMI  shift 66
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	AND  shift 71
	OR  shift 72
	GT  shift 73
	LT  shift 74
	EQ  shift 75
	GEQ  shift 76
	LEQ  shift 77
	NEQ  shift 78
	PIPE  shift 79
	EXITCODE  shift 80
	CONS  shift 81
	.  error


state 41
	expr : list .  (78)

	.  reduce 78


state 42
	expr : index .  (74)

	.  reduce 74


state 43
	expr : list_cons .  (79)

	.  reduce 79


state 44
	expr : list_length .  (80)

	.  reduce 80


state 45
	list_cons : expr . CONS ID  (28)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : expr . PIPE expr  (67)
	expr : LPAREN expr . RPAREN  (72)
	expr : expr . EXITCODE  (73)

	RPAREN  shift 82
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	AND  shift 71
	OR  shift 72
	GT  shift 73
	LT  shift 74
	EQ  shift 75
	GEQ  shift 76
	LEQ  shift 77
	NEQ  shift 78
	PIPE  shift 79
	EXITCODE  shift 80
	CONS  shift 81
	.  error


state 46
	stmt_list : stmt_list . stmt  (39)
	stmt : LBRACE stmt_list . RBRACE  (42)

	LPAREN  shift 5
	LBRACE  shift 6
	RBRACE  shift 83
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	IF  shift 10
	WHILE  shift 11
	FOR  shift 12
	RETURN  shift 13
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	stmt  goto 84
	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 40
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 47
	list : LBRACKET RBRACKET .  (24)

	.  reduce 24


state 48
	cont_list : expr . COMMA cont_list  (25)
	cont_list : expr . RBRACKET  (26)
	list_cons : expr . CONS ID  (28)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : expr . PIPE expr  (67)
	expr : expr . EXITCODE  (73)

	COMMA  shift 85
	RBRACKET  shift 86
	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	AND  shift 71
	OR  shift 72
	GT  shift 73
	LT  shift 74
	EQ  shift 75
	GEQ  shift 76
	LEQ  shift 77
	NEQ  shift 78
	PIPE  shift 79
	EXITCODE  shift 80
	CONS  shift 81
	.  error


state 49
	list : LBRACKET cont_list .  (23)

	.  reduce 23


state 50
	list_cons : expr . CONS ID  (28)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : expr . PIPE expr  (67)
	expr : MINUS expr .  (68)
	expr : expr . EXITCODE  (73)

	CONS  shift 81
	SEMI  reduce 68
	RPAREN  reduce 68
	RBRACE  reduce 68
	COMMA  reduce 68
	RBRACKET  reduce 68
	PLUS  reduce 68
	MINUS  reduce 68
	TIMES  reduce 68
	DIVIDE  reduce 68
	AND  reduce 68
	OR  reduce 68
	GT  reduce 68
	LT  reduce 68
	EQ  reduce 68
	GEQ  reduce 68
	LEQ  reduce 68
	NEQ  reduce 68
	PIPE  reduce 68
	EXITCODE  reduce 68


state 51
	list_cons : expr . CONS ID  (28)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : expr . PIPE expr  (67)
	expr : NOT expr .  (69)
	expr : expr . EXITCODE  (73)

	CONS  shift 81
	SEMI  reduce 69
	RPAREN  reduce 69
	RBRACE  reduce 69
	COMMA  reduce 69
	RBRACKET  reduce 69
	PLUS  reduce 69
	MINUS  reduce 69
	TIMES  reduce 69
	DIVIDE  reduce 69
	AND  reduce 69
	OR  reduce 69
	GT  reduce 69
	LT  reduce 69
	EQ  reduce 69
	GEQ  reduce 69
	LEQ  reduce 69
	NEQ  reduce 69
	PIPE  reduce 69
	EXITCODE  reduce 69


state 52
	stmt : IF LPAREN . expr RPAREN stmt  (43)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (44)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 87
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 53
	stmt : WHILE LPAREN . expr RPAREN stmt  (46)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 88
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 54
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (45)
	expr_opt : .  (47)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	SEMI  reduce 47

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 55
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44
	expr_opt  goto 89


state 55
	list_cons : expr . CONS ID  (28)
	expr_opt : expr .  (48)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : expr . PIPE expr  (67)
	expr : expr . EXITCODE  (73)

	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	AND  shift 71
	OR  shift 72
	GT  shift 73
	LT  shift 74
	EQ  shift 75
	GEQ  shift 76
	LEQ  shift 77
	NEQ  shift 78
	PIPE  shift 79
	EXITCODE  shift 80
	CONS  shift 81
	SEMI  reduce 48
	RPAREN  reduce 48


state 56
	stmt : RETURN expr_opt . SEMI  (41)

	SEMI  shift 90
	.  error


state 57
	expr : ID LPAREN . args_opt RPAREN  (71)
	args_opt : .  (81)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	RPAREN  reduce 81

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 91
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44
	args_opt  goto 92
	args_list  goto 93


state 58
	index : ID LBRACKET . expr RBRACKET  (27)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 94
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 59
	expr : ID ASSIGN . expr  (70)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 95
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 60
	list_cons : expr . CONS ID  (28)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : expr . PIPE expr  (67)
	expr : expr . EXITCODE  (73)
	expr : RUN expr .  (76)

	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	AND  shift 71
	OR  shift 72
	GT  shift 73
	LT  shift 74
	EQ  shift 75
	GEQ  shift 76
	LEQ  shift 77
	NEQ  shift 78
	PIPE  shift 79
	CONS  shift 81
	SEMI  reduce 76
	RPAREN  reduce 76
	RBRACE  reduce 76
	COMMA  reduce 76
	RBRACKET  reduce 76
	EXITCODE  reduce 76


state 61
	list_cons : expr . CONS ID  (28)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : expr . PIPE expr  (67)
	expr : expr . EXITCODE  (73)
	expr : PATH expr .  (75)

	PLUS  shift 67
	MINUS  shift 68
	TIMES  shift 69
	DIVIDE  shift 70
	AND  shift 71
	OR  shift 72
	GT  shift 73
	LT  shift 74
	EQ  shift 75
	GEQ  shift 76
	LEQ  shift 77
	NEQ  shift 78
	PIPE  shift 79
	CONS  shift 81
	SEMI  reduce 75
	RPAREN  reduce 75
	RBRACE  reduce 75
	COMMA  reduce 75
	RBRACKET  reduce 75
	EXITCODE  reduce 75


state 62
	list_length : LEN ID .  (29)

	.  reduce 29


state 63
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (30)
	vdecl : typ ID . SEMI  (37)

	SEMI  shift 96
	LPAREN  shift 97
	.  error


state 64
	eargs_list : LBRACE . cont_eargs_list  (19)
	eargs_list : LBRACE . RBRACE  (20)

	LPAREN  shift 5
	RBRACE  shift 98
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	cont_eargs_list  goto 99
	expr  goto 100
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 65
	simple_exec : path eargs_list .  (16)

	.  reduce 16


state 66
	stmt : expr SEMI .  (40)

	.  reduce 40


state 67
	expr : expr PLUS . expr  (55)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 101
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 68
	expr : expr MINUS . expr  (56)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 102
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 69
	expr : expr TIMES . expr  (57)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 103
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 70
	expr : expr DIVIDE . expr  (58)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 104
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 71
	expr : expr AND . expr  (65)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 105
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 72
	expr : expr OR . expr  (66)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 106
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 73
	expr : expr GT . expr  (63)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 107
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 74
	expr : expr LT . expr  (61)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 108
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 75
	expr : expr EQ . expr  (59)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 109
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 76
	expr : expr GEQ . expr  (64)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 110
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 77
	expr : expr LEQ . expr  (62)

	LPAREN  shift 5
	LBRACKET  shift 7
	MINUS  shift 8
	NOT  shift 9
	LITERAL  shift 23
	BLIT  shift 24
	ID  shift 25
	FLIT  shift 26
	CHAR  shift 27
	STRING  shift 28
	RUN  shift 30
	PATH  shift 31
	LEN  shift 32
	.  error

	exec  goto 37
	simple_exec  goto 38
	path  goto 39
	expr  goto 111
	list  goto 41
	index  goto 42
	list_cons  goto 43
	list_length  goto 44


state 78
	expr : expr NEQ . expr  (60)
